--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ h1 {
   margin: 0;
   padding: 20px 0;
   color: #FFFFE4;
-  text-shadow: 3px 3px 1px black;
+  text-shadow: 3px 3px 1px white;
 }
 
 img {
